Encrypt localStorage entries by default and add session storage
