# Services/Bones.Api/OpenApi/swagger.json
@@ -134,6 +134,68 @@
         }
       }
     },
+    "/Account/my/session": {
+      "get": {
+        "tags": [
+          "Account"
+        ],
+        "summary": "Gets or creates a session token for the user and an encryption key to be used for the session.\r\nAll data stored in localStorage on the client side should be encrypted with the encryption key, to protect against XSS attacks.\r\n\r\nThis encryption key should not be saved in the client, instead save the session token Guid and use it to retrieve the encryption key from the server.",
+        "operationId": "GetOrCreateMySessionAsync",
+        "parameters": [
+          {
+            "name": "sessionId",
+            "in": "query",
+            "description": "The session token to use, if null a new one will be created",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetOrCreateMySessionResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/Anonymous/register": {
       "post": {
         "tags": [
@@ -3359,6 +3421,26 @@
         },
         "additionalProperties": false,
         "description": "Response for the GetMyProfileAsync endpoint"
+      },
+      "GetOrCreateMySessionResponse": {
+        "required": [
+          "base64LocalStorageKey",
+          "sessionId"
+        ],
+        "type": "object",
+        "properties": {
+          "sessionId": {
+            "type": "string",
+            "description": "The session SessionId to use",
+            "format": "uuid"
+          },
+          "base64LocalStorageKey": {
+            "type": "string",
+            "description": "The encryption key to use"
+          }
+        },
+        "additionalProperties": false,
+        "description": "Response for the GetOrCreateMySessionAsync endpoint"
       },
       "GetProjectDashboardResponse": {
         "required": [
